Update: Textarea with counter

--- a/Resources/Private/Translations/en/Main.xlf
+++ b/Resources/Private/Translations/en/Main.xlf
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-    <file original="" product-name="Carbon.Editor.Styling" source-language="en" target-language="de" datatype="plaintext">
+    <file original="" product-name="Carbon.Editor.Styling" source-language="en" datatype="plaintext">
         <body>
             <group id="numberOfChars" restype="x-gettext-plurals">
                 <trans-unit id="numberOfChars[0]" xml:space="preserve">
-                    <source>{0} char</source>
-                    <target>{0} Zeichen</target>
+                    <source>{0} character</source>
                 </trans-unit>
                 <trans-unit id="numberOfChars[1]" xml:space="preserve">
-                    <source>{0} chars</source>
-                    <target>{0} Zeichen</target>
+                    <source>{0} characters</source>
                 </trans-unit>
             </group>
         </body>
