--- a/Resources/Private/Translations/de/Main.xlf
+++ b/Resources/Private/Translations/de/Main.xlf
@@ -192,6 +192,14 @@
                 <source>Monospace font</source>
                 <target>Festbreitenschrift</target>
             </trans-unit>
+            <trans-unit id="fontType.display" xml:space="preserve">
+                <source>Font for headlines</source>
+                <target>Schriften für Überschriften</target>
+            </trans-unit>
+            <trans-unit id="search" xml:space="preserve">
+                <source>Search</source>
+                <target>Suche</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
