--- a/Resources/Private/Translations/en/Main.xlf
+++ b/Resources/Private/Translations/en/Main.xlf
@@ -142,6 +142,12 @@
             <trans-unit id="fontType.monospace" xml:space="preserve">
                 <source>Monospace font</source>
             </trans-unit>
+            <trans-unit id="fontType.display" xml:space="preserve">
+                <source>Font for headlines</source>
+            </trans-unit>
+            <trans-unit id="search" xml:space="preserve">
+                <source>Search</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
